changed wording, added uid to dashboard

--- a/src/app/kanban/board-list/board-list.component.html
+++ b/src/app/kanban/board-list/board-list.component.html
@@ -15,7 +15,7 @@ cdkDropListOrientation="horizontal"
     cdkDragDisabled
     (click)="openBoardDialog()"
     >
-    New Board
+    Add Board
 </button>
 </div>
 
