--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -11,6 +11,7 @@
     </div>
     <div *ngIf="afAuth.authState | async as user">
         <p>Logged in as <strong>{{user.email}}</strong></p>
+        <div>{{user.uid}}</div>
 
         <button mat-stroked-button (click)="afAuth.signOut()">LogOut</button>
     </div>
